syntax = "proto3";

//package com.samt.identity;

option java_multiple_files = true;
option java_package = "com.example.user_groupservice.grpc";

service UserGrpcService {
  // Get basic user info
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // Get user's system role
  rpc GetUserRole(GetUserRoleRequest) returns (GetUserRoleResponse);

  // Verify user exists and is active
  rpc VerifyUserExists(VerifyUserRequest) returns (VerifyUserResponse);

  // Batch get users (for group member list)
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);

  // Update user profile (UC22 - proxy pattern)
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}



message ListUsersRequest {
  int32 page = 1;
  int32 size = 2;
  string status = 3;
  string role = 4;
}

message ListUsersResponse {
  repeated GetUserResponse users = 1;
  int64 total_elements = 2;
}

message GetUserRequest {
  string user_id = 1; // UUID as string
}

message GetUserResponse {
  string user_id = 1;
  string email = 2;
  string full_name = 3;
  UserStatus status = 4;
  UserRole role = 5;
  bool deleted = 6;
}

message GetUserRoleRequest {
  string user_id = 1;
}

message GetUserRoleResponse {
  UserRole role = 1;
}

message VerifyUserRequest {
  string user_id = 1;
}

message VerifyUserResponse {
  bool exists = 1;
  bool active = 2; // status == ACTIVE
  string message = 3;
}

message GetUsersRequest {
  repeated string user_ids = 1;
}

message GetUsersResponse {
  repeated GetUserResponse users = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string full_name = 2;
}

message UpdateUserResponse {
  GetUserResponse user = 1;
}

enum UserStatus {
  ACTIVE = 0;
  LOCKED = 1;
}

enum UserRole {
  ADMIN = 0;
  LECTURER = 1;
  STUDENT = 2;
}
